# vscode-svsch

./: .gitignore  .vscodeignore  README.md  cucumber.js  package-lock.json  package.json  playwright.config.ts  tsconfig.extension.json  tsconfig.json  tsconfig.webview.json  vite.config.ts  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-start.sh
.github/workflows/: ci.yml
scripts/: bundle-surelog.js  install-surelog.js  test-bdd.sh
src/: diagramPanel.ts  extension.ts  logger.ts
src/diagram/: constants.ts  interfaceGeometry.ts  nodeSizing.ts  selectLabels.ts
src/ir/: ids.ts  nodeMetadata.ts  types.ts
src/layout/: mergeLayout.ts
src/parser/: backend.ts  moduleOrdering.ts  textExtractor.ts  uhdmExtractor.ts  veribleExtractor.ts
src/parser/backend_cpp/: CMakeLists.txt
src/parser/backend_cpp/include/: extractor.hpp
src/parser/backend_cpp/src/: extractor.cpp  main.cpp  test_main.cpp
src/parser/backend_cpp/src/extractor_parts/: expressions.inc  helpers.inc  interface_bus.inc  lookup_source.inc  modules.inc  procedural.inc  serialization.inc  struct_bus.inc
src/storage/: layoutStore.ts
src/types/: elkjs.d.ts  xyflow.d.ts
src/webview/: index.html  main.tsx  styles.css  vscodeApi.ts
test/: helper.ts  testConstants.ts  test_run.ts
test/features/: diagram.feature  diagram_interaction.feature  dynamic_updates.feature  literals.feature  navigation.feature  schematic_observation.feature  variable_bit_select.feature
test/fixtures/: aggregate_assignment_showcase.sv  alu_chain.sv  bus_breakout.sv  bus_comp.sv  (+15 more)
(+70 files in other folders)
